--- a/scripts/R27_sub_groups_of_sweets.Rmd
+++ b/scripts/R27_sub_groups_of_sweets.Rmd
@@ -1031,14 +1031,70 @@ print(exposure_number4)
 ### visualize   
 
 ```{r}
-library(treemapify) # For creating treemaps with ggplot
-
 # Combine all three dataframes into a single one
 combined_data <- bind_rows(exposure_number2, exposure_number3, exposure_number4) %>%
   # Create a label for the plot that includes the code, description, and sample size (N)
   mutate(
     plot_label = paste0(food_code, "\n", food_category, "\n(N = ", num_stool_exposed_to_any_intake, ")")
   )
+
+
+plot_data <- combined_data %>%
+  # Clean up the food category descriptions for better labels
+  mutate(
+    description = str_replace_all(food_category, "_", " "),
+    plot_label = paste(food_code, description, sep = ": ")
+  ) %>%
+  # Use reorder_within to create a factor that can be sorted independently within each facet
+  mutate(
+    category_sorted = reorder_within(plot_label, num_stool_exposed_to_any_intake, level)
+  )
+```
+
+
+```{r}
+# --- Step 3: Create the Lollipop Plot Visualization ---
+
+ggplot(plot_data, aes(x = num_stool_exposed_to_any_intake, y = plot_label)) +
+  # geom_segment creates the "stick" of the lollipop
+  geom_segment(
+    aes(x = 0, xend = num_stool_exposed_to_any_intake, y = plot_label, yend = plot_label),
+    color = "gray"
+  ) +
+  # geom_point creates the "candy" of the lollipop
+  geom_point(aes(color = level), size = 4) +
+  
+  # This is the key to making the reordering work across facets
+  #scale_y_reordered() +
+  
+  # Use facet_wrap to create a separate plot for each level of granularity
+  # ncol = 1 arranges them vertically. scales = "free_y" allows each facet to have its own y-axis.
+  facet_wrap(~ factor(level, levels = c("2-Digit Subcategories", "3-Digit Subcategories", "4-Digit Subcategories")), ncol = 1, scales = "free_y") +
+  
+  # Add informative labels and a title
+  labs(
+    title = "Decrease in Statistical Power with Increasing Food Code Granularity",
+    subtitle = "Number of exposed stool samples (N) for each food category",
+    x = "Number of Exposed Stool Samples",
+    y = "Food Category"
+  ) +
+  
+  # Use a clean theme and adjust styling
+  theme_bw() +
+  theme(
+    legend.position = "none",
+    plot.title = element_text(size = 16, face = "bold"),
+    plot.subtitle = element_text(size = 12),
+    strip.text = element_text(size = 14, face = "bold") # Style the facet titles
+  )
+
+```
+
+
+```{r}
+library(treemapify) # For creating treemaps with ggplot
+
+
 
 # --- Step 3: Create the Treemap Visualization ---
 
